@@ -1,6 +1,13 @@
 2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* Makefile.am:
+	Fix reference to abs_top_srcdir when
+	accessing bootstrap directory.
+	* Makefile.in: Regenerated.
+
+2008-05-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
 	Add XSL patch.
 	* Makefile.in: Regenerated.
 	* patches/icedtea-xslfix.patch:
